--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>NotesSnippet - By Amit Prajapati</title>
   </head>
   <body>
-    <div id="root" class="text-white w-full h-screen  bg-slate-950"></div>
+    <div id="root" class="text-white w-full h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
